--- a/OpenKeychain/build.gradle
+++ b/OpenKeychain/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'witness'
 apply plugin: 'jacoco'
+apply plugin: 'com.squareup.sqldelight'
 // apply plugin: 'com.github.kt3k.coveralls'
 
 dependencies {
@@ -98,6 +99,8 @@ dependencies {
 
     compile "android.arch.lifecycle:extensions:1.0.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
+    compile "android.arch.persistence:db-framework:1.0.0"
 }
 
 // Output of ./gradlew -q calculateChecksums
