--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath files('gradle-witness.jar')
         // bintray dependency to satisfy dependency of openpgp-api lib
         classpath 'com.novoda:bintray-release:0.8.0'
+        classpath 'com.squareup.sqldelight:gradle-plugin:0.7.0'
     }
 }
 
